--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </style>
 </head>
   <body style="background-color:skyblue;">
+    <p><a href="https://hushno.github.io/hznbc.github.io/">返回</a></p>
  <div id="header">
   <font size="6"><h1>勘心</h1></font>
    </div>
